# fantasma_cero

./: .gitignore  Cargo.toml  README.md  config.example.toml  config.toml
.github/workflows/: release.yml
examples/_ex1/: index.html
examples/ex1/: Cargo.toml
examples/ex1/html_templates/: about.html  base.html  contacts.html  home.html
examples/ex1/src/: main.rs
examples/ex2/: Cargo.toml
examples/ex2/html_templates/: base.html  home.html
examples/ex2/src/: main.rs
examples/ex2_with_nginx/: validation_only.conf  waf_as_proxy.conf
examples/ex2_with_nginx/site/: index.html  page2.html  page3.html
examples/ex3_with_caddy/: validation_only.conf
html_templates/: challenge.html  feedback_report.html  invalidated.html  js_challenge.html  pow_challenge.html  rate_limited.html  success.html  suspicious.html
migrations/sqlite/: 001_init.sql
scripts/: exec_on_port_80.sh  waf_as_proxy.sh
src/: config.rs  db.rs  health.rs  helpers.rs  main.rs  metrics.rs  persistence.rs
src/admin/: api_types.rs  auth.rs  helpers.rs  mod.rs  router.rs  state.rs  types.rs
src/security/: helpers.rs  js_token.rs  mod.rs  pow_token.rs
src/web_ui/admin/: app.js  base.html  config.html  index.html  sign_in.html  style.css
src/web_ui/admin/assets/: app.js  style.css
