[package]
name = "fantasma_cero"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9"
rand = "0.9"
sha2 = "0.10.9"
hex = "0.4.3"
once_cell = "1.21.3"
base64 = "0.22.1"
anyhow = "1.0.98"
jsonwebtoken = "9.3.1"
hmac = "0.12.1"
