[package]
name = "fantasma_cero"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.9"
rand = "0.9"
sha2 = "0.10.9"
hex = "0.4.3"
once_cell = "1.21.3"
base64 = "0.22.1"
anyhow = "1.0.98"
jsonwebtoken = "9.3.1"
hmac = "0.12.1"
reqwest = { version = "0.12", features = ["stream"] }
tera = "1.20"
uuid = { version = "1.0", features = ["v4"] }
tracing-subscriber = "0.3.20"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
